--- a/views/registroContacto.ejs
+++ b/views/registroContacto.ejs
@@ -7,7 +7,7 @@
   </head>
   <body>
 <table>
-<form method="post" action="guardarContacto">
+<form method="get" action="guardarContacto">
     <tr>
         <td><label for="nombres" class="lblnombre">Nombres:</label></td>
         <td><input type="text" id="nombres"  class="txtcampo"  name="agenda[nombres]" value="<%= agenda.nombres %>"></td>
